--- a/srcSomaCafeTownSendDI2/SomaCafeTownSend.mxml
+++ b/srcSomaCafeTownSendDI2/SomaCafeTownSend.mxml
@@ -3,11 +3,12 @@
 	xmlns:fx="http://ns.adobe.com/mxml/2009"
     xmlns:s="library://ns.adobe.com/flex/spark"
 	xmlns:mx="library://ns.adobe.com/flex/mx"
-	xmlns:soma="com.cafetownsend.*"
+	xmlns:soma="com.cafetownsend.*"	xmlns:views="com.cafetownsend.views.*"
 	addedToStage="added()">
 	
 	<fx:Script>
 		<![CDATA[
+
 			import com.cafetownsend.SomaApplication;
 			
 			private var _app:SomaApplication;
@@ -18,4 +19,6 @@
 		]]>
 	</fx:Script>
 
+	<!--<views:MainView/>-->
+	
 </s:Application>
