--- a/srcSomaCafeTownSendDI/SomaCafeTownSend.mxml
+++ b/srcSomaCafeTownSendDI/SomaCafeTownSend.mxml
@@ -1,27 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Application addedToStage="init()" xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute" xmlns:views="com.cafetownsend.views.*" viewSourceURL="srcview/index.html">
+<s:Application
+	xmlns:fx="http://ns.adobe.com/mxml/2009"
+    xmlns:s="library://ns.adobe.com/flex/spark"
+	xmlns:mx="library://ns.adobe.com/flex/mx"
+	xmlns:soma="com.cafetownsend.*">
 
-<mx:Script>
-	<![CDATA[
-		import com.cafetownsend.SomaApplication;
-		
-		[Bindable]
-		public var navigationID:int = 0; 
-		
-		public var app:SomaApplication;
-		
-		private function init():void {
-			// start soma application
-			app = new SomaApplication(this);
-		}
-		
-	]]>
-</mx:Script>
+	<fx:Declarations>
+		<soma:SomaApplication container="{this}"/>
+	</fx:Declarations>
 
-	<mx:ViewStack id="navigation" selectedIndex="{navigationID}" width="100%" height="100%">
-		<views:LoginView id="loginView"/>
-		<views:EmployeList id="employeList"/>
-		<views:EmployeDetails id="employeDetails"/>
-	</mx:ViewStack>
-
-</mx:Application>
+</s:Application>
